--- a/src/robot_navigation/config/nav2_params.yaml
+++ b/src/robot_navigation/config/nav2_params.yaml
@@ -189,75 +189,103 @@ controller_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
-      publish_frequency: 2.0
+      update_frequency: 10.0
+      publish_frequency: 5.0
+
       global_frame: odom
       robot_base_frame: base_link
       rolling_window: true
+
       width: 3
       height: 3
       resolution: 0.05
-      robot_radius: 0.22
-      plugins: ["voxel_layer", "inflation_layer"]
-      inflation_layer:
-        plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.70
-      voxel_layer:
-        plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: True
-        publish_voxel_map: True
-        origin_z: 0.0
-        z_resolution: 0.05
-        z_voxels: 16
-        max_obstacle_height: 2.0
-        mark_threshold: 0
+
+      # Conservative footprint to protect blind 90° side
+      footprint: "[[-0.3, -0.25],[-0.3,  0.25],[ 0.3,  0.25],[ 0.3, -0.25]]"
+
+      plugins:
+        - obstacle_layer
+        - inflation_layer
+
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
+        enabled: true
+
         observation_sources: scan
         scan:
           topic: /scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 3.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
-          obstacle_min_range: 0.0
-      static_layer:
-        plugin: "nav2_costmap_2d::StaticLayer"
-        map_subscribe_transient_local: True
-      always_send_full_costmap: True
+
+          # Tuned for 20–25 cm LiDAR height
+          min_obstacle_height: 0.05
+          max_obstacle_height: 0.35
+
+          obstacle_min_range: 0.15
+          obstacle_max_range: 3.0
+          raytrace_min_range: 0.15
+          raytrace_max_range: 3.5
+
+          clearing: true
+          marking: true
+
+      inflation_layer:
+        plugin: "nav2_costmap_2d::InflationLayer"
+        inflation_radius: 0.45
+        cost_scaling_factor: 3.0
+
+      always_send_full_costmap: true
+
 
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 1.0
+      update_frequency: 2.0
       publish_frequency: 1.0
+
       global_frame: odom
       robot_base_frame: base_link
-      robot_radius: 0.22
+
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["obstacle_layer", "inflation_layer"]
+
+      footprint: "[[-0.3, -0.25],[-0.3,  0.25],[ 0.3,  0.25],[ 0.3, -0.25]]"
+
+      plugins:
+        - static_layer
+        - obstacle_layer
+        - inflation_layer
+
+      static_layer:
+        plugin: "nav2_costmap_2d::StaticLayer"
+        map_subscribe_transient_local: true
+
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
-        enabled: True
+        enabled: true
+
         observation_sources: scan
         scan:
           topic: /scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 3.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
-          obstacle_min_range: 0.0
+
+          min_obstacle_height: 0.05
+          max_obstacle_height: 0.35
+
+          obstacle_min_range: 0.15
+          obstacle_max_range: 3.0
+          raytrace_min_range: 0.15
+          raytrace_max_range: 3.5
+
+          clearing: true
+          marking: true
+
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
+        inflation_radius: 0.6
         cost_scaling_factor: 3.0
-        inflation_radius: 0.7
-      always_send_full_costmap: True
+
+      always_send_full_costmap: true
+
 
 # The yaml_filename does not need to be specified since it going to be set by defaults in launch.
 # If you'd rather set it in the yaml, remove the default "map" value in the tb3_simulation_launch.py
